La serpiente crece
Ahora la serpiente se representa con Deque en lugar de con List.
Arreglado el codigo de girar serpiente